internal/xds/translator/testdata/out/xds-ir/jwt-from-multiple-listeners.routes.yaml
- ignorePortInHostMatching: true
  name: envoy-gateway-system/external-gateway/domain1-example-com-http
  virtualHosts:
  - domains:
    - domain1.example.com
    metadata:
      filterMetadata:
        envoy-gateway:
          resources:
          - kind: Gateway
            name: external-gateway
            namespace: envoy-gateway-system
            sectionName: domain1-example-com-http
    name: envoy-gateway-system/external-gateway/domain1-example-com-http/domain1_example_com
    routes:
    - match:
        prefix: /
      metadata:
        filterMetadata:
          envoy-gateway:
            resources:
            - kind: HTTPRoute
              name: domain1
              namespace: ns1
      name: httproute/ns1/domain1/rule/0/match/0/domain1_example_com
      route:
        cluster: httproute/ns1/domain1/rule/0
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.jwt_authn:
          '@type': type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.PerRouteConfig
          requirementName: jwt/requirement/a84799e66c64ed7c2eb8701b2c0ff3849215572c80290825ebc4c63375a581a4
  - domains:
    - domain2.example.com
    metadata:
      filterMetadata:
        envoy-gateway:
          resources:
          - kind: Gateway
            name: external-gateway
            namespace: envoy-gateway-system
            sectionName: domain2-example-com-http
    name: envoy-gateway-system/external-gateway/domain2-example-com-http/domain2_example_com
    routes:
    - match:
        prefix: /
      metadata:
        filterMetadata:
          envoy-gateway:
            resources:
            - kind: HTTPRoute
              name: domain2
              namespace: ns2
      name: httproute/ns2/domain2/rule/0/match/0/domain2_example_com
      route:
        cluster: httproute/ns2/domain2/rule/0
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.jwt_authn:
          '@type': type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.PerRouteConfig
          requirementName: jwt/requirement/2e185e0ebcf2694d92db2cffbf9e32d8552a08e06d2701915c01d6eee7619603
